--- a/CustomDialogPraticeApp/app/src/main/res/layout/activity_main.xml
+++ b/CustomDialogPraticeApp/app/src/main/res/layout/activity_main.xml
@@ -46,4 +46,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="case7" />
+
+    <Button
+        android:id="@+id/case8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="case8" />
 </LinearLayout>
